always ascape say/1

--- a/eggdrop/eggdrop.conf
+++ b/eggdrop/eggdrop.conf
@@ -374,8 +374,8 @@ set die-on-sigterm 1
 
 # Comment these two lines if you wish to enable the .tcl and .set commands.
 # If you select your owners wisely, you should be okay enabling these.
-unbind dcc n tcl *dcc:tcl
-unbind dcc n set *dcc:set
+#unbind dcc n tcl *dcc:tcl
+#unbind dcc n set *dcc:set
 
 # If you enable this setting, only permanent owners (owner setting) will be
 # able to use .tcl and .set. Moreover, if you want only let permanent owners
@@ -385,7 +385,7 @@ set must-be-owner 1
 # Comment out this line to add the 'simul' partyline command (owners can
 # manipulate other people on the party line). Please select owners wisely
 # and use this command ethically!
-unbind dcc n simul *dcc:simul
+#unbind dcc n simul *dcc:simul
 
 # Set here the maximum number of dcc connections you will allow. You can
 # increase this later, but never decrease it.
@@ -491,9 +491,6 @@ set global-chanset {
 #
 #channel add #wave {
 #}
-channel add ##prolog {
-}
-
 
 
 
@@ -1043,8 +1040,8 @@ set mode-buf-length 200
 # the bot and attempting to guess passwords. We now unbind this command by
 # default to discourage them. You can enable these commands by commenting the
 # following two lines.
-unbind msg - ident *msg:ident
-unbind msg - addhost *msg:addhost
+#unbind msg - ident *msg:ident
+#unbind msg - addhost *msg:addhost
 
 # Some IRC servers are using some non-standard op-like channel prefixes/modes.
 # Define them here so the bot can recognize them. Just "@" should be fine for
@@ -1233,7 +1230,7 @@ set max-filesize 1024
 # This module provides support for storing of notes for users from each other.
 # Note sending between currently online users is supported in the core, this is
 # only for storing the notes for later retrieval.
-#loadmodule notes
+loadmodule notes
 
 # Set here the filename where private notes between users are stored.
 set notefile "LamestBot.notes"
@@ -1247,7 +1244,7 @@ set note-life 60
 
 # Set this to 1 if you want to allow users to specify a forwarding address
 # for forwarding notes to another account on another bot.
-set allow-fwd 0
+set allow-fwd 1
 
 # Set this to 1 if you want the bot to let people know hourly if they have
 # any notes.
@@ -1293,7 +1290,7 @@ set info-party 0
 # This module works only for users in the bot's userlist. If you are looking for
 # a better and more advanced seen module, try the gseen module by G'Quann. You
 # can find it at http://www.visions-of-fantasy.de/gseen.mod/.
-#loadmodule seen
+loadmodule seen
 
 
 #### BLOWFISH MODULE ####
@@ -1310,7 +1307,7 @@ loadmodule blowfish
 
 # This module provides assoc support, i.e. naming channels on the botnet.
 # You can load it by un-commenting the following line.
-#loadmodule assoc
+loadmodule assoc
 
 
 #### WIRE MODULE ####
@@ -1319,7 +1316,7 @@ loadmodule blowfish
 # encrypted partyline communication tool, compatible with wire.tcl. An
 # encryption module must be loaded to use this module. Un-comment the
 # following line to load the wire module.
-#loadmodule wire
+loadmodule wire
 
 #### UPTIME MODULE ####
 
@@ -1333,7 +1330,7 @@ loadmodule blowfish
 # logfile for debugging purposes only. The only publicly available information
 # will be the bot's botnet-nick, version and uptime. If you do not wish for this
 # information to be sent, comment out the following line.
-#loadmodule uptime
+loadmodule uptime
 
 ##### SCRIPTS #####
 
@@ -1358,5 +1355,5 @@ source /usr/share/eggdrop/scripts/action.fix.tcl
 source /usr/share/eggdrop/scripts/userinfo.tcl
 loadhelp userinfo.help
 
-source /opt/PrologMUD/externals/MUD_ircbot/tcl/prolog.tcl
+source /opt/PrologMUD/externals/MUD_ircbot/eggdrop/prolog.tcl
 
