now usign say/2

--- a/eggdrop/eggdrop.conf
+++ b/eggdrop/eggdrop.conf
@@ -349,7 +349,7 @@ set hourly-updates 00
 
 # Un-comment the next line and set the list of owners of the bot.
 # You NEED to change this setting.
-#set owner "MrLame, MrsLame"
+set owner "dmiles, swipl"
 
 # Who should a note be sent to when new users are learned?
 set notify-newusers "$owner"
@@ -786,11 +786,11 @@ set nick "PrologMUD"
 # Set the alternative nick which the bot uses on IRC if the nick specified
 # by 'set nick' is unavailable. All '?' characters will be replaced by random
 # numbers.
-set altnick "meetbot_"
+set altnick "PrologMUD_"
 
 # Set what should be displayed in the real-name field for the bot on IRC.
 # This can not be blank, it has to contain something.
-set realname "see http://PrologMUD.debian.net/"
+set realname "see http://prologmoo.com/"
 
 # This is a Tcl script to be run immediately after connecting to a server.
 bind evnt - init-server evnt:init_server
