--- a/eggdrop/eggdrop.conf
+++ b/eggdrop/eggdrop.conf
@@ -300,7 +300,12 @@ set connect-timeout 15
 # Specify here the number of lines to accept from a user on the partyline
 # within 1 second before they are considered to be flooding and therefore
 # get booted.
-set dcc-flood-thr 300
+set dcc-flood-thr 30000
+
+# Number of seconds to wait between transmitting queued lines to the server.
+# Lower this value at your own risk.  ircd is known to start flood control
+# at 512 bytes/2 seconds.
+set msg-rate 0
 
 # Define here how many telnet connection attempts in how many seconds from
 # the same host constitute a flood. The correct format is Attempts:Seconds.
@@ -336,7 +341,7 @@ set resolve-timeout 15
 #set reserved-portrange 2010:2020
 
 # Set the time in minutes that temporary ignores should last.
-set ignore-time 15
+set ignore-time 1
 
 # Define here what Eggdrop considers 'hourly'. All calls to it, including such
 # things as note notifying or userfile saving, are affected by this.
@@ -389,7 +394,7 @@ set must-be-owner 1
 
 # Set here the maximum number of dcc connections you will allow. You can
 # increase this later, but never decrease it.
-set max-dcc 50
+set max-dcc 100
 
 # Enable this setting if you want +d & +k users to use commands bound as -|-.
 set allow-dk-cmds 1
@@ -455,10 +460,12 @@ set use-info 0
 # channel add #chan. Look in the section below for explanation of every option.
 
 set global-flood-chan 10:60
+set global-flood-chan 0:0
 set global-flood-deop 3:10
 set global-flood-kick 3:10
 set global-flood-join 5:60
 set global-flood-ctcp 3:60
+set global-flood-ctcp 0:0
 set global-flood-nick 5:60
 set global-aop-delay 5:30
 set global-idle-kick 0
@@ -843,11 +850,13 @@ set answer-ctcp 3
 
 # Set here how many msgs in how many seconds from one host constitutes
 # a flood. If you set this to 0:0, msg flood protection will be disabled.
-set flood-msg 5:60
+#set flood-msg 5:60
+set flood-msg 0:0
 
 # Set here how many ctcps in how many seconds from one host constitutes
 # a flood. If you set this to 0:0, ctcp flood protection will be disabled.
-set flood-ctcp 3:60
+#set flood-ctcp 3:60
+set flood-ctcp 0:0
 
 # This settings makes the bot cycle forever through the server list until
 # it successfully connects to one.
@@ -880,10 +889,10 @@ set serverror-quit 1
 # Set here the maximum number of lines to queue to the server. If you're
 # going to dump large chunks of text to people over IRC, you will probably
 # want to raise this. 300 is fine for most people though.
-set max-queue-msg 300
+set max-queue-msg 3000
 
 # If you want Eggdrop to trigger binds for ignored users, set this to 1.
-set trigger-on-ignore 0
+set trigger-on-ignore 1
 
 # This setting configures PUBM and MSGM binds to be exclusive of PUB and MSG
 # binds. This means if a MSGM bind with the mask "*help*" exists and is
@@ -914,7 +923,7 @@ set optimize-kicks 1
 # If your network supports more recipients per command then 1, you can
 # change this behavior here. Set this to the number of recipients per
 # command, or set this to 0 for unlimited.
-set stack-limit 4
+set stack-limit 0
 
 ### SERVER MODULE - OTHER NETWORKS (net-type 5) ###
 
