Almnost ready for first pack release

--- a/conf/eggdrop.conf
+++ b/conf/eggdrop.conf
@@ -1,4 +1,4 @@
-#!/usr/bin/eggdrop
+#!/usr/bin/eggdrop -m
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
 # $Id: eggdrop.conf,v 1.47 2005-08-29 03:51:36 wcc Exp $
@@ -1364,5 +1364,5 @@ source /usr/share/eggdrop/scripts/action.fix.tcl
 source /usr/share/eggdrop/scripts/userinfo.tcl
 loadhelp userinfo.help
 
-source /opt/PrologMUD/externals/MUD_ircbot/eggdrop/prolog.tcl
+source ./prolog.tcl
 
