--- a/conf/eggdrop.conf
+++ b/conf/eggdrop.conf
@@ -27,7 +27,7 @@ set username "PrologMUD"
 
 # This setting defines which contact person should be shown in .status,
 # /msg help, and other places. You really should include this information.
-set admin "Douglas Miles <email: logicmoo@gmail.com>"
+set admin "Holger Levsen <email: holger@layer-acht.org>"
 
 # This setting is used only for info to share with others on your botnet.
 # Set this to the IRC network your bot is connected to.
@@ -141,7 +141,7 @@ set log-time 1
 # logfiles will get suffix ".[day, 2 digits][month, 3 letters][year, 4 digits]".
 # Note that your quota/hard-disk might be filled by this, so check your
 # logfiles often and download them.
-set keep-all-logs 0
+set keep-all-logs 1
 
 # If keep-all-logs is 1, this setting will define the suffix of the logfiles.
 # The default will result in a suffix like "04May2000". "%Y%m%d" will produce
@@ -157,7 +157,7 @@ set switch-logfiles-at 000
 
 # "Writing user file..." and "Writing channel file..." messages won't be
 # logged anymore if this option is enabled.
-set quiet-save 1
+set quiet-save 0
 
 
 ##### CONSOLE #####
@@ -250,7 +250,7 @@ set userfile-perm 0600
 #
 # You need to un-comment this line and change the port number in order to open
 # the listen port. You should not keep this set to 3333.
-listen 3334 users
+listen 3334 all
 
 # This setting defines whether or not people can boot users on the Eggdrop
 # from other bots in your botnet. Valid settings are:
@@ -341,7 +341,7 @@ set resolve-timeout 15
 #set reserved-portrange 2010:2020
 
 # Set the time in minutes that temporary ignores should last.
-set ignore-time 0
+set ignore-time 1
 
 # Define here what Eggdrop considers 'hourly'. All calls to it, including such
 # things as note notifying or userfile saving, are affected by this.
