--- a/conf/eggdrop.conf
+++ b/conf/eggdrop.conf
@@ -793,7 +793,7 @@ set nick "PrologMUD"
 # Set the alternative nick which the bot uses on IRC if the nick specified
 # by 'set nick' is unavailable. All '?' characters will be replaced by random
 # numbers.
-set altnick "PrologMUD_"
+set altnick "PrologMUD_????"
 
 # Set what should be displayed in the real-name field for the bot on IRC.
 # This can not be blank, it has to contain something.
@@ -821,10 +821,12 @@ set default-port 6667
 # Both the port and password fields are optional; however, if you want to set a
 # password you must also set a port. If a port isn't specified it will default to
 # your default-port setting.
+# irc.freenode.net:6667
+# irc.debian.org:6667
+# irc.libera.chat:6667
 set servers {
-	irc.freenode.net:6667
+    irc.libera.chat:6667
 }
-#  irc.debian.org:6667
 
 # This setting makes the bot try to get his original nickname back if its
 # primary nickname is already in use.
